2.1.2
- Added more search pattern and source code parsing to the
  getter analysis.
- Change: Moved code generation to it's own namespace.

2.1.1
- Added the info, if a property / method is inherited.
- Added a configuration for the scope analysis.
- Added the search option "Search whole value".
- Added the additional info from Smoky-Grey to the Hans, which
  will be displayed inside the help-box on hover.
- Bugfix: The comments will not break out of the getter analysis
  json anymore
- Bugfix: Removed a warning in case kreXX was called from eval'd
  code.
- Bugfix: Dumping of inherited private properties works now.
- Bugfix: Inherited properties and methods are now regarded by the
  scope analysis.
- Bugfix: Blacklisted all reflection classes for configured debug
  methods.
- Bugfix: Getter analysis is now respecting the scope analysis
  result.
- Bugfix: Removed the type-spam in the additional data.
- Change: Reworked some of the configurations (disable, maxRuntime,
  memoryLeft, iprange)
- Change: Refactored what did not make it into v2.0.0 due to time
  constraints and introduced a factory.


2.1.0
- Added getter method analysis for models.
- Added search options to both skins.
- Bugfix: Added LazyLoadingProxy->__toString() to the debug
  blacklist to prevent a fatal.
- Bugfix: Fixed the (XX) logo interference with the search box
  in the Hans skin.
- Bugfix: The search count is not zero-based anymore.
- Bugfix: Recursion resolving works now for closures.
- Change: Moved the configuration file to it's own folder.
- Change: Made the callback display in both skins a little less
  obtrusive
- Change: Added the '=' the the Hans Skin for better readability.
- Change: [runtime]level is now '10' in the factory settings.
- Change: [runtime]maxCall is now '15' in the factory settings.
- Refactored code comment analysis.

2.0.1
- Refactored the configuration and introduced models there.
- Removed the \Krexx::enable() call.