@@ -3,7 +3,8 @@
 </script>
 <html>
     <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="robots" content="noindex" />
         <title>{headline}</title>
         {cssJs}
     </head>
